NEW: support language of japanese
update po files for BambuStudio

Change-Id: I6783fe831d05a19eb7fce6f8b24ee7949d1ed86b
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-26 16:59+0800\n"
+"POT-Creation-Date: 2023-01-12 14:41+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -382,6 +382,9 @@ msgstr ""
 msgid "Add"
 msgstr ""
 
+msgid "Modify"
+msgstr ""
+
 msgid "Notice"
 msgstr ""
 
@@ -485,9 +488,6 @@ msgid "This is the newest version."
 msgstr ""
 
 msgid "Info"
-msgstr ""
-
-msgid "Loading user presets..."
 msgstr ""
 
 msgid "Rebuild"
@@ -642,6 +642,12 @@ msgstr ""
 msgid "Select settings"
 msgstr ""
 
+msgid "Hide"
+msgstr ""
+
+msgid "Show"
+msgstr ""
+
 msgid "Delete"
 msgstr ""
 
@@ -728,6 +734,9 @@ msgid "Flush into this object"
 msgstr ""
 
 msgid "Flush into objects' support"
+msgstr ""
+
+msgid "Edit in Parameter Table"
 msgstr ""
 
 msgid "Convert from inch"
@@ -851,9 +860,6 @@ msgid "Center"
 msgstr ""
 
 msgid "Edit Process Settings"
-msgstr ""
-
-msgid "Edit in Parameter Table"
 msgstr ""
 
 msgid "Edit print parameters for a single object"
@@ -1108,9 +1114,6 @@ msgstr ""
 msgid "Please enter the layer number"
 msgstr ""
 
-msgid "Jump to Layer"
-msgstr ""
-
 msgid "Add Pause"
 msgstr ""
 
@@ -1118,6 +1121,9 @@ msgid "Add Custom G-code"
 msgstr ""
 
 msgid "Add Custom Template"
+msgstr ""
+
+msgid "Jump to Layer"
 msgstr ""
 
 msgid "Filament "
@@ -1153,13 +1159,25 @@ msgstr ""
 msgid "Empty"
 msgstr ""
 
-msgid "Click the pencil icon to edit the filament."
+msgid "AMS"
+msgstr ""
+
+msgid "NO AMS"
+msgstr ""
+
+msgid "Cali"
+msgstr ""
+
+msgid "Calibration of extrusion"
 msgstr ""
 
 msgid "Load Filament"
 msgstr ""
 
 msgid "Unload Filament"
+msgstr ""
+
+msgid "Ext Spool"
 msgstr ""
 
 msgid "Tips"
@@ -1353,6 +1371,9 @@ msgstr ""
 msgid "Please log out and login to the printer again."
 msgstr ""
 
+msgid "Failed uploading print file. Please enter ip address again."
+msgstr ""
+
 msgid "Downloading"
 msgstr ""
 
@@ -1428,6 +1449,12 @@ msgstr ""
 msgid "AMS Materials Setting"
 msgstr ""
 
+msgid "Confirm"
+msgstr ""
+
+msgid "Close"
+msgstr ""
+
 msgid "Colour"
 msgstr ""
 
@@ -1452,10 +1479,86 @@ msgstr ""
 msgid "Setting AMS slot information while printing is not supported"
 msgstr ""
 
-msgid "Confirm"
+msgid "Factors of dynamic flow cali"
 msgstr ""
 
-msgid "Close"
+msgid "Factor K"
+msgstr ""
+
+msgid "Factor N"
+msgstr ""
+
+msgid "Please input a valid value (K in 0~0.5)"
+msgstr ""
+
+msgid "Please input a valid value (K in 0~0.5, N in 0.6~2.0)"
+msgstr ""
+
+msgid "Dynamic flow calibration"
+msgstr ""
+
+msgid ""
+"The nozzle temp and max volumetric speed will affect the calibration "
+"results. Please fill in the same values as the actual printing. They can be "
+"auto-filled by selecting a filament preset."
+msgstr ""
+
+msgid "Nozzle Diameter"
+msgstr ""
+
+msgid "Bed Type"
+msgstr ""
+
+msgid "Nozzle temperature"
+msgstr ""
+
+msgid "Bed Temperature"
+msgstr ""
+
+msgid "Max volumetric speed"
+msgstr ""
+
+msgid "\\u2103"
+msgstr ""
+
+msgid "Bed temperature"
+msgstr ""
+
+msgid "mm\\u00B3"
+msgstr ""
+
+msgid "Start calibration"
+msgstr ""
+
+msgid "Next"
+msgstr ""
+
+msgid ""
+"Calibration completed. Please select the factors according to the left "
+"figure and fill them in the input boxes."
+msgstr ""
+
+msgid "Save"
+msgstr ""
+
+msgid "Last Step"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "Calibrating... %d%%"
+msgstr ""
+
+msgid "Calibration completed"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid "%s does not support %s"
+msgstr ""
+
+msgid "Dynamic flow Calibration"
+msgstr ""
+
+msgid "Step"
 msgstr ""
 
 msgid "AMS Slots"
@@ -1477,6 +1580,29 @@ msgstr ""
 msgid "Print with the filament mounted on the back of chassis"
 msgstr ""
 
+msgid "Cabin humidity"
+msgstr ""
+
+msgid ""
+"Green represents that AMS humidity is normal, orange and red represent that "
+"humidity is too high.(Lower the better)"
+msgstr ""
+
+msgid "Desiccant status"
+msgstr ""
+
+msgid ""
+"Desiccant status lower than two bars indicates that desiccant can be "
+"inactive. Please change the desiccant.(Higher the better)"
+msgstr ""
+
+msgid ""
+"Note: When the lid is open or the desiccant pack is changed, it can take "
+"hours or a night to absorb the moisture. Low temperatures also slow down the "
+"process. During this time, the indicator may not represent the chamber "
+"accurately."
+msgstr ""
+
 msgid ""
 "Config which AMS slot should be used for a filament used in the print job"
 msgstr ""
@@ -1488,6 +1614,18 @@ msgid "AMS slot used for this filament"
 msgstr ""
 
 msgid "Click to select AMS slot manually"
+msgstr ""
+
+msgid "Do not Enable AMS"
+msgstr ""
+
+msgid "Print using materials mounted on the back of the case"
+msgstr ""
+
+msgid "Print with filaments in ams"
+msgstr ""
+
+msgid "Print with filaments mounted on the back of the chassis"
 msgstr ""
 
 msgid "AMS Settings"
@@ -1785,7 +1923,7 @@ msgstr ""
 
 msgid ""
 "Arachne engine only works when overhang slowing down is disabled.\n"
-"This may cause decline in the quality of overhang surface when print fastly\n"
+"This may cause decline in the quality of overhang surface when print fastly"
 msgstr ""
 
 msgid ""
@@ -1823,7 +1961,7 @@ msgstr ""
 msgid ""
 "Switch to rectilinear pattern?\n"
 "Yes - switch to rectilinear pattern automaticlly\n"
-"No  - reset density to default non 100% value automaticlly\n"
+"No  - reset density to default non 100% value automaticlly"
 msgstr ""
 
 msgid "Auto bed leveling"
@@ -1893,9 +2031,6 @@ msgid "MC"
 msgstr ""
 
 msgid "MainBoard"
-msgstr ""
-
-msgid "AMS"
 msgstr ""
 
 msgid "TH"
@@ -1986,6 +2121,12 @@ msgstr ""
 msgid "Tool"
 msgstr ""
 
+msgid "Layer Time"
+msgstr ""
+
+msgid "Layer Time (log)"
+msgstr ""
+
 msgid "Height: "
 msgstr ""
 
@@ -1996,6 +2137,12 @@ msgid "Speed: "
 msgstr ""
 
 msgid "Flow: "
+msgstr ""
+
+msgid "Layer Time: "
+msgstr ""
+
+msgid "Layer Time(log): "
 msgstr ""
 
 msgid "Fan Speed: "
@@ -2396,22 +2543,19 @@ msgstr ""
 msgid " will be closed before creating a new model. Do you want to continue?"
 msgstr ""
 
-msgid "Slice"
+msgid "Slice plate"
+msgstr ""
+
+msgid "Print plate"
 msgstr ""
 
 msgid "Slice all"
-msgstr ""
-
-msgid "Slice plate"
 msgstr ""
 
 msgid "Export G-code file"
 msgstr ""
 
 msgid "Send"
-msgstr ""
-
-msgid "Print plate"
 msgstr ""
 
 msgid "Export plate sliced file"
@@ -2736,7 +2880,7 @@ msgid ""
 "It contains the following information:\n"
 "1. The Process presets\n"
 "2. The Filament presets\n"
-"3. The Printer presets\n"
+"3. The Printer presets"
 msgstr ""
 
 msgid "Synchronization"
@@ -3012,6 +3156,9 @@ msgstr ""
 msgid "Still load"
 msgstr ""
 
+msgid "Please select an AMS slot before calibration"
+msgstr ""
+
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
 "unload the filament and try again."
@@ -3081,6 +3228,37 @@ msgid "%s information"
 msgstr ""
 
 msgid "Skip"
+msgstr ""
+
+msgid "Unable to connect printer"
+msgstr ""
+
+#, possible-c-format, possible-boost-format
+msgid ""
+"Cannot detect the LAN IP address of %s. Are %s and Bambu Studio in the same "
+"LAN?"
+msgstr ""
+
+msgid ""
+"Failed to connect to the printer through LAN. Please enter the correct "
+"printer IP address and access code."
+msgstr ""
+
+msgid "IP"
+msgstr ""
+
+msgid "Access Code"
+msgstr ""
+
+msgid ""
+"Note : The location of IP and access code on the machine is as follows :"
+msgstr ""
+
+msgid ""
+"X1 General Settings - Network Settings in the side bar of X1 main screen"
+msgstr ""
+
+msgid "P1P General Settings - WLAN in the sidebar of the main screen"
 msgstr ""
 
 msgid "3D Mouse disconnected."
@@ -3389,7 +3567,7 @@ msgstr ""
 #, possible-c-format, possible-boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Found following keys "
-"unrecognized:\n"
+"unrecognized:"
 msgstr ""
 
 msgid "You'd better upgrade your software.\n"
@@ -3401,7 +3579,7 @@ msgstr ""
 #, possible-c-format, possible-boost-format
 msgid ""
 "The 3mf's version %s is newer than %s's version %s, Suggest to upgrade your "
-"software.\n"
+"software."
 msgstr ""
 
 msgid "The 3mf is not compatible, load geometry data only!"
@@ -3592,9 +3770,6 @@ msgstr ""
 msgid "The current project has unsaved changes, save it before continue?"
 msgstr ""
 
-msgid "Save"
-msgstr ""
-
 msgid "Number of copies:"
 msgstr ""
 
@@ -3670,7 +3845,7 @@ msgid ""
 msgstr ""
 
 #, possible-c-format, possible-boost-format
-msgid "Plate %d: %s does not support filament %s (%s).\n"
+msgid "Plate %d: %s does not support filament %s (%s)."
 msgstr ""
 
 msgid "Switching the language requires application restart.\n"
@@ -4138,13 +4313,13 @@ msgstr ""
 
 msgid ""
 "Please check the following infomation and click Confirm to continue sending "
-"print:\n"
+"print:"
 msgstr ""
 
 msgid ""
 "The printer type used to generate G-code is not the same type as the "
 "currently selected physical printer. It is recommend to re-slice by "
-"selecting the same printer type.\n"
+"selecting the same printer type."
 msgstr ""
 
 #, possible-c-format, possible-boost-format
@@ -4266,7 +4441,7 @@ msgid ""
 "When recording timelapse without toolhead, it is recommended to add a "
 "\"Timelapse Wipe Tower\" \n"
 "by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\".\n"
+"\"->\"Timelapse Wipe Tower\"."
 msgstr ""
 
 msgid "Line width"
@@ -5287,11 +5462,10 @@ msgstr ""
 msgid "%1% is too tall, and collisions will be caused."
 msgstr ""
 
-msgid " is too close to others, there may be collisions when printing.\n"
+msgid " is too close to others, there may be collisions when printing."
 msgstr ""
 
-msgid ""
-" is too close to exclusion area, there may be collisions when printing.\n"
+msgid " is too close to exclusion area, there may be collisions when printing."
 msgstr ""
 
 msgid "Prime Tower"
@@ -5374,7 +5548,7 @@ msgid "Layer height cannot exceed nozzle diameter"
 msgstr ""
 
 #, possible-c-format, possible-boost-format
-msgid "Plate %d: %s does not support filament %s\n"
+msgid "Plate %d: %s does not support filament %s"
 msgstr ""
 
 msgid "Generating skirt & brim"
@@ -5515,9 +5689,6 @@ msgid ""
 msgstr ""
 
 msgid "°C"
-msgstr ""
-
-msgid "Bed temperature"
 msgstr ""
 
 msgid ""
@@ -5949,9 +6120,6 @@ msgstr ""
 msgid ""
 "Minimum HRC of nozzle required to print the filament. Zero means no checking "
 "of nozzle's HRC."
-msgstr ""
-
-msgid "Max volumetric speed"
 msgstr ""
 
 msgid ""
@@ -6585,6 +6753,15 @@ msgid ""
 "print when travel move. Using spiral line to lift z can prevent stringing"
 msgstr ""
 
+msgid "Z Hop Type"
+msgstr ""
+
+msgid "Slope"
+msgstr ""
+
+msgid "Spiral"
+msgstr ""
+
 msgid "Retraction Speed"
 msgstr ""
 
@@ -6928,9 +7105,6 @@ msgstr ""
 msgid "Nozzle temperature for layers after the initial one"
 msgstr ""
 
-msgid "Nozzle temperature"
-msgstr ""
-
 msgid "Bed temperature difference"
 msgstr ""
 
@@ -7165,6 +7339,9 @@ msgstr ""
 msgid "Load cached slicing data from directory"
 msgstr ""
 
+msgid "Slice"
+msgstr ""
+
 msgid "Slice the plates: 0-all plates, i-plate i, others-invalid"
 msgstr ""
 
@@ -7249,6 +7426,9 @@ msgid "Generating infill regions"
 msgstr ""
 
 msgid "Generating infill toolpath"
+msgstr ""
+
+msgid "Detect overhangs for auto-lift"
 msgstr ""
 
 msgid "Generating support"
